vmworld_cna1075bu/conference-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: conference-app
  name: conference-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: conference-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: conference-app
    spec:
      containers:
      - image: harbor.tpmlab.vmware.com/library/conference-app
        imagePullPolicy: Always
        name: conference-app
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
