vmworld_cna1075bu/stress-cpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-stress
spec:
  containers:
  - name: cpu-stress
    image: debian
    command: ["/bin/bash"]
    args: ["-c", "cat /dev/zero > /dev/null" ]
