vmworld_cna1075bu/terminator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: terminator
spec:
  containers:
  - name: termination-demo-container
    image: debian
    command: ["/bin/bash"]
    args: ["-c", "sleep 10 && echo Sleep expired && echo container will exit now" ]
