vmworld_cna1075bu/conference-app-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: conference-app-svc
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    run: conference-app
  sessionAffinity: None
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conference-app-simple-ingress
spec:
  backend:
    serviceName: conference-app-svc
    servicePort: 80
